
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef int u32 ;
struct TYPE_4__ {int status; } ;
struct TYPE_5__ {TYPE_1__ ST; } ;
struct TYPE_6__ {TYPE_2__ OPN; } ;


 int EL_YMTIMER ;
 int elprintf (int ,char*,int ,int,int,int,int) ;
 int timer_a_next_oflow ;
 int timer_b_next_oflow ;
 TYPE_3__ ym2612 ;
 int ym2612_read_local () ;
 int z80_cycles_from_68k () ;

__attribute__((used)) static u32 ym2612_read_local_68k(void)
{
  int xcycles = z80_cycles_from_68k() << 8;

  ym2612_read_local();

  elprintf(EL_YMTIMER, "timer 68k read %i, sched %i, %i @ %i|%i", ym2612.OPN.ST.status,
      timer_a_next_oflow>>8, timer_b_next_oflow>>8, xcycles >> 8, (xcycles >> 8) / 228);
  return ym2612.OPN.ST.status;
}
